fixed spacing in file names

--- a/src/assets/fonts/refrigeratorFonts.css
+++ b/src/assets/fonts/refrigeratorFonts.css
@@ -1,24 +1,24 @@
 @font-face {
     font-family: 'Refrigerator Deluxe';
-    src: url(/src/assets/fonts/Refrigerator\ Deluxe.otf);
+    src: url(/src/assets/fonts/RefrigeratorDeluxe.otf);
 }
 
 @font-face {
     font-family: 'Refrigerator Deluxe Bold';
-    src: url(/src/assets/fonts/Refrigerator\ Deluxe\ Bold.otf);
+    src: url(/src/assets/fonts/RefrigeratorDeluxeBold.otf);
 }
 
 @font-face {
     font-family: 'Refrigerator Deluxe Extra Bold';
-    src: url(/src/assets/fonts/Refrigerator\ Deluxe\ Extrabold.otf);
+    src: url(/src/assets/fonts/RefrigeratorDeluxeExtrabold.otf);
 }
 
 @font-face {
     font-family: 'Refrigerator Deluxe Heavy';
-    src: url(/src/assets/fonts/Refrigerator\ Deluxe\ Heavy.otf);
+    src: url(/src/assets/fonts/RefrigeratorDeluxeHeavy.otf);
 }
 
 @font-face {
     font-family: 'Refrigerator Deluxe Light';
-    src: url(/src/assets/fonts/Refrigerator\ Deluxe\ Light.otf);
+    src: url(/src/assets/fonts/RefrigeratorDeluxeLight.otf);
 }
